--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,4 @@
-{% extends "base.html" %}
-{% block content %}
-<h1>Your Name</h1>
-<p>This is my public profile.</p>
-
-<h3>Basic Info</h3>
-<p>Add your short bio, links, and photos here.</p>
-
-<hr>
-
-<a href="/signup" class="btn">Unlock Advanced Info</a>
-{% endblock %}
+<img src="{{ url_for('static', filename='uploads/profile.jpg') }}" 
+     alt="Profile Photo"
+     width="200"
+     style="border-radius: 50%;">
