--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,11 +1,29 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Admin Login</h2>
+<h2>Admin Dashboard</h2>
 
-<form method="POST">
-    <input type="text" name="username" placeholder="Username" required><br><br>
-    <input type="password" name="password" placeholder="Password" required><br><br>
-    <button type="submit">Login</button>
-</form>
+<p>Total Signups: {{ total }}</p>
+
+<table border="1" cellpadding="8">
+<tr>
+    <th>Name</th>
+    <th>Email</th>
+    <th>IP</th>
+    <th>Country</th>
+    <th>Device</th>
+    <th>Date & Time</th>
+</tr>
+
+{% for v in visitors %}
+<tr>
+    <td>{{ v.name }}</td>
+    <td>{{ v.email }}</td>
+    <td>{{ v.ip }}</td>
+    <td>{{ v.country }}</td>
+    <td>{{ v.device }}</td>
+    <td>{{ v.timestamp.strftime('%d-%m-%Y %I:%M:%S %p') }}</td>
+</tr>
+{% endfor %}
+</table>
 
 {% endblock %}
