--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Sign In</title>
-</head>
-<body>
-    <h2>Sign In To View Profile</h2>
+{% extends "base.html" %}
+{% block content %}
+<h2>Admin Login</h2>
 
-    <form method="POST">
-        Name: <input type="text" name="name" required><br>
-        Email: <input type="email" name="email" required><br>
-        Password: <input type="password" name="password" required><br>
-        <input type="submit" value="Enter">
-    </form>
-</body>
-</html>
+<form method="POST">
+    <input type="text" name="username" placeholder="Username" required><br><br>
+    <input type="password" name="password" placeholder="Password" required><br><br>
+    <button type="submit">Login</button>
+</form>
+
+{% endblock %}
